# hotel-management

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
compose-volumes/nginx/: default.conf
hotel_management_system/: .env
hotel_management_system/hotel_management_system/: settings.py  urls.py
hotel_management_system/hotel_management_system/templates/: base.html
hotel_management_system/hotels/: admin.py  jobs.py  models.py  urls.py  views.py
hotel_management_system/hotels/fixtures/: city_hotels.json
hotel_management_system/hotels/migrations/: 0001_initial.py
hotel_management_system/hotels/static/hotels/css/: styles.css
hotel_management_system/hotels/templates/hotels/: cities.html  hotels.html
hotel_management_system/hotels/templates/hotels/includes/: pagination.html
hotel_management_system/hotels/tests/: test_jobs.py  test_models.py  test_urls.py  test_views.py
