[tool.poetry]
name = "hotel-management"
version = "0.1.0"
description = ""
authors = ["khalaimovda <halaimov_15@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
django-crontab = "^0.7.1"
requests = "^2.32.3"
setuptools = "^70.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
